css/style.css
body {
	font-size: 14px;
	line-height: 1.71429;
	margin-bottom: 1.71429em;
	margin-bottom: 0;
	font-family: 'Merriweather', serif, 'Open Sans', sans-serif;
	background-color: #FFFDE9;
	
}

#page {
	background-image: url(../img/shoes.png);
	background-repeat: no-repeat;
	background-position-x: right;
	background-position-y: bottom;
}

@media ( max-width: 992px) {
	#page {
		background-size: 50%;
	}
}

h1{
  font-size: 2.375em;		
  line-height: 30px;
  margin-bottom: 0.63158em;
}
h2{
  font-size: 1.5em;
  line-height: 20px;
  margin-bottom: 0.75em;
}
a, a:hover, a:active, a:focus{
    color: #FFF;
}
img{
	max-width: 100%;
	height: auto;
}
.capital{
	text-transform: capitalize;
}
.shoemaker-header{
    margin: 35px 0;
}
.header-container{
    text-align: center;
}
.header-container img{
	margin-bottom: 30px;
}
.landing-title{
    text-align: center;
    font-weight: bold;
    font-size: 24PX;
    font-family: "open sans";
}
.landing-tagline{
    text-align: center;
    font-size: 16px;
    color: #000;
    font-family: 'Merriweather', sans-serif;
    width: 652px;
    margin: 0 auto;
    line-height: 1.6;
}
.landing-tagline em{
	color: #795548;
}
.shoemaker-choose-platform{
    margin-bottom: 15px;
}
.shoemaker-choose-platform-select{
    margin-bottom: 10px;
}
.platform-select a{
    width: 100%;
    float: left;
}

.shoemaker-choose-platform,
.shoemaker-powered-by{
    font-size: 16px;
	color: #383534;
    font-weight: bold;
	text-align: center;	
	font-family: 'Open Sans', 'Merriweather';
}
.shoemaker-powered-by-container{
	margin-bottom: 40px;
}
.shoemaker-powered-by{
	margin-bottom: 10px;
}
.powered-by-content-wrap{
    width: 100%;
    max-width: 630px;
    display: block;
    margin: 0 auto;
}
.powered-by-content {
    width: 50%;
    float: left;
}
.powered-by-content a img{
	-webkit-transition: all 0.24s ease-in-out;
	-moz-transition: all 0.24s ease-in-out;
	-o-transition: all 0.24s ease-in-out;
	transition: all 0.24s ease-in-out;
}
.powered-by-content a img:hover{
	box-shadow: 0 3px 12px rgba(0,0,0,0.23),0 3px 12px rgba(0,0,0,0.16);
}
.container-select .platform-select img{
	width: 300px;
	height: auto;
	float: right;
    border: 1px solid #E7E1AB;
    padding: 10px;
} 
.container-select .platform-select:nth-child(2) img{
	float: left;
}
.platform-select a img{
	-webkit-transition: all 0.24s ease-in-out;
	-moz-transition: all 0.24s ease-in-out;
	-o-transition: all 0.24s ease-in-out;
	transition: all 0.24s ease-in-out;
}
.platform-select a img:hover{
	box-shadow: 0 3px 12px rgba(0,0,0,0.23),0 3px 12px rgba(0,0,0,0.16);
}
.powered-by-content img{
	display: block;
    margin: 0 auto;
}
.shoemaker-mock-up {
    text-align: center;
    float: left;
    width: 100%;
    margin: 0 0 35px 0;
}
.mock-up-title{
    margin-bottom: 40px;
}
.mock-up-title h2{
    color: #8BC34A;
	text-align: center;
    font-weight: bold;
    margin-bottom: 10px;
}
.mock-up-button{
	float: left;
	width: 100%;
	text-align: center;
    margin-bottom: 30px;
}
.button{
	border-radius: 50px;
	font-family: 'Open Sans', sans-serif;
    font-weight: bold;
    color: #FFF;
	background: #4E342E;
    padding: 10px 25px;
    border: 0 none;
    text-transform: uppercase;
    font-size: 12px;
    line-height: 22px;
    box-shadow: 0px 3px 0px 0px rgba(0,0,0,0.87);
    border-radius: 4px;
    position: relative;
    margin-bottom: 3px;
    position: relative;
	text-decoration: none;
}
.button:hover{
	background: #7C6964;
    color: #FFF;
	text-decoration: none;
}
.button:focus{
	text-decoration: none;
}
.button:active{
    top: 3px;
	box-shadow: none;
	text-decoration: none;
}
.mock-up-title p{
	font-family: 'Open Sans', sans-serif;
	text-align: center;
}
.shoemaker-footer{
    width: 100%;
    background: #1b1e21;
    float: left;
    text-align: center;
	padding: 30px 0;
	font-family: 'Open Sans', sans-serif;
	color: #fff;
}
.shoemaker-footer p{
	margin-bottom: 0;
}
.shoemaker-footer a{
	color: #fff;
	text-decoration: underline;
}
@media(max-width: 768px){
	.platform-select {
		float: left;
		width: 50%;
	}	
	.platform-select:nth-child(1){
		padding-left: 0;
	}
	.platform-select:nth-child(2){
		padding-right: 0;
	}
	.container-select .platform-select img{
		width: 100%;
	}
	.powered-by-content-wrap{
		max-width: 100%;
	}
	.platform-select a{
		width: 100%;
	}
	.powered-by-content img{
		width: 100%;
	}
	.shoemaker-powered-by-container{
		margin-bottom: 50px;
	}
	.shoemaker-powered-by-container-inner{
		padding: 0;
	}
	.shoemaker-mock-up{
		margin-top: 20px;
	}
}

#ls-logo,
#ls-vc {
	margin: 0;
}

#ls-vc {
	float: right;
}

